# applications_camera

./: .gitignore  BUILD.gn  NOTCE  OAT.xml  README.OpenSource  README.md  README_zh.md  build-profile.json5  build.gradle  bundle.json  hvigorw.bat  oh-package.json5  package-lock.json  package.json  settings.gradle
.hvigor/outputs/logs/details/: details.json
AppScope/: app.json5
AppScope/resources/base/element/: string.json
common/: .gitignore  build-profile.json5  hvigorfile.js  index.ets  package.json
common/src/main/: config.json  module.json5
entry/src/main/: config.json
features/featurecommon/: build-profile.json5  hvigorfile.js
features/featurecommon/src/main/: config.json  module.json5
features/featureservice/: Constants.ts  FeatureManager.ts  Mode.ts  ModeAssembler.ts
features/multi/: build-profile.json5  hvigorfile.js  index.ets  oh-package.json5  package-lock.json  package.json
features/multi/src/main/: config.json  module.json5
features/photo/: .gitignore  build-profile.json5  hvigorfile.js  index.ets  oh-package.json5  package-lock.json  package.json
features/photo/src/main/: config.json  module.json5
features/video/: .gitignore  build-profile.json5  build.gradle  index.ets  oh-package.json5  package-lock.json  package.json
hvigor/: hvigor-config.json5
product/phone/: build-profile.json5  build.gradle  package-lock.json  package.json
product/tablet/: build-profile.json5  build.gradle  hvigorfile.js  package-lock.json  package.json
product/wearable/: build.gradle
signature/: camera.cer  camera.p12  camera.p7b
(+406 files in other folders)
